--- a/Quote Generator/index.html
+++ b/Quote Generator/index.html
@@ -19,20 +19,19 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Lorem exercitationem delectus molestiae fugiat! ipsum dolor sit amet consectetur
-                adipisicing elit. Voluptatem, temporibus!</span>
+            <span id="quote"></span>
             <i class="fas fa-quote-right"></i>
         </div>
         <!-- Authot -->
         <div class="quote-author">
-            <span id="author">~Lorem ipsum.</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button-container">
             <button class="twitter-button" id="twitter" title="Tweet This!">
                 <i class="fab fa-twitter"></i>
             </button>
-            <button class="new-quote">New Quote</button>
+            <button class="new-quote" onclick="randomQuote()">New Quote</button>
         </div>
     </div>
 
