--- a/Quote Generator/index.html
+++ b/Quote Generator/index.html
@@ -31,7 +31,7 @@
             <button class="twitter-button" id="twitter" title="Tweet This!">
                 <i class="fab fa-twitter"></i>
             </button>
-            <button class="new-quote" onclick="randomQuote()">New Quote</button>
+            <button id="new-quote">New Quote</button>
         </div>
     </div>
 
