--- a/Infinity Scroll v2/index.html
+++ b/Infinity Scroll v2/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Infinity Scroll</title>
     <link rel="icon" type="image/png" href="favicon.png">
-    
+
     <!-- Old Favicon - Grab Icon From Google (Might be unsupported in the future) -->
     <!-- <link rel="icon" type="image/png" href="https://s2.googleusercontent.com/s2/favicons?domain=jacinto.design"> -->
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
+    <H1>Infinity Scroll</H1>
+    <div id="loader" class="loader" hidden>
+        <img src="loader.svg" alt="" srcset="">
+    </div>
+
+    <div class="image-container" id="image-container"></div>
+    <!-- 
+        <div class="image-container" id="image-container">
+            <img src="https://images.unsplash.com/photo-1550935114-99de2f488f47?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                alt="" srcset="">
+                alt="" srcset="">
+        </div> 
+    -->
     <!-- Script -->
     <script src="script.js"></script>
 </body>
+
 </html>
